<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/songNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"/>

    <SeekBar
        android:id="@+id/progressSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewind"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volume_button"
        android:textSize="16sp"/>

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>